--- a/src/components/home/HeroSection.css
+++ b/src/components/home/HeroSection.css
@@ -107,7 +107,7 @@
 
 .hero-description {
   font-size: 14px;
-  color: #666666;
+  color: #7F768D;
   line-height: 1.6;
   margin: 0;
 }
